// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`splitOnIdentifiers splitOnIdentifiers false 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b21 dot:contains <b21/alice>, <b21/alison> .

<b21/alice> <foaf:knows> [
		schema:name \\"Alison\\" ;
		rdf:type dot:Wikilink ;
	] .

<b21/alison> <foaf:knows> [
		schema:name \\"Alice\\" ;
		rdf:type dot:Wikilink ;
	] .

"
`;

exports[`splitOnIdentifiers splitOnIdentifiers true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b22 dot:contains <b22/alice>, <b22/alison> .

<b22/alice> <foaf:knows> [
		schema:name \\"Alison\\" ;
		rdf:type dot:Wikilink ;
	] .

<b22/alison> <foaf:knows> [
		schema:name \\"Alice\\" ;
		rdf:type dot:Wikilink ;
	] .

"
`;

exports[`splitOnTag splitOnTag false 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b17 <http://www.vault/age> \\"37\\", \\"42\\" ;
	dot:tag \\"person\\" ;
	<http://www.vault/name> \\"Alice\\", \\"Bob\\", \\"Charlie\\" .

"
`;

exports[`splitOnTag splitOnTag true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b18 dot:contains [
		<http://www.vault/age> \\"37\\" ;
		dot:tag \\"person\\" ;
		<http://www.vault/name> \\"Alice\\" ;
	], [
		<http://www.vault/age> \\"42\\" ;
		dot:tag \\"person\\" ;
		<http://www.vault/name> \\"Bob\\" ;
	] ;
	<http://www.vault/name> \\"Charlie\\" .

"
`;

exports[`toRDF BlockIds 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b3 dot:contains <b3/1>, <b3/2>, <b3/3> ;
	<http://www.vault/description> \\"Section 4\\" ;
	dot:tag \\"Section\\" .

<b3/1> <http://www.vault/description> \\"Section 1\\" ;
	dot:related <Bob\\\\u0020Details/2> .

<b3/2> <http://www.vault/description> \\"Section 2\\" ;
	dot:related <Bob\\\\u0020Details/3\\\\u0020> .

<Bob\\\\u0020Details/3\\\\u0020> schema:name \\" Pointer to section 3\\" .

<b3/3> <http://www.vault/description> \\"Section 3\\" ;
	dot:related <Unknown/1> .

"
`;

exports[`toRDF Inline fields 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b9 <http://www.vault/inline> \\"field\\" ;
	<http://www.vault/thoughts> \\"It was decent.\\" ;
	<http://www.vault/rating> \\"6'\\" ;
	<http://www.vault/subject> [
		<http://www.vault/inline> \\"field\\" ;
	], [
		<http://www.vault/inline> \\"field\\" ;
	], [
		<http://www.vault/thoughts> \\"It was decent.\\" ;
	], [
		<http://www.vault/rating> \\"6\\" ;
	] ;
	<http://www.vault/too> [
		<http://www.vault/many> [
			<http://www.vault/inline> \\"fields\\" ;
		] ;
	] ;
	dot:undefined [
		<foaf:knows> _:Alice ;
	] ;
	dot:related _:Alice, [
		schema:name \\"Bob\\" ;
		rdf:type dot:Wikilink ;
	] .

_:Alice schema:name \\"Alice\\" ;
	a dot:Wikilink .

"
`;

exports[`toRDF Links 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b1 dot:related <http://www.vault/../houses/img.png>, [
		schema:name \\"link 1\\" ;
		rdf:type dot:Wikilink ;
	], <http://www.vault/link%201>, <http://www.vault/link%201.md>, <http://example.com>, [
		schema:name \\"Alias 1\\", \\"link 1 \\" ;
		rdf:type dot:Wikilink ;
	], <http://www.vault/protocol>, <https://example2.com> .

<http://example.com> schema:name \\"Alias 2\\", \\"here\\" .

"
`;

exports[`toRDF Outline 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .
"
`;

exports[`toRDF People 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b4 <http://www.vault/number> \\"42\\" ;
	<http://www.vault/age> \\"42\\", \\"56\\" .

"
`;

exports[`toRDF Yaml 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b5 <http://www.vault/date-updated> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://www.vault/one> [
		<http://www.vault/0> \\"Two\\" ;
		<http://www.vault/1> [
			<http://www.vault/three> [
				<http://www.vault/0> \\"Other\\" ;
			] ;
		] ;
	] ;
	dot:tag \\"cats\\", \\"dogs\\" .

"
`;
